# Lecture-3-WorkShop

./: .gitignore  README.md
examples/build_system_generators/: CMakeLists.txt
examples/build_system_generators/libraries/: message_lib.cpp
examples/build_systems/: README.md  function1.cpp  function2.cpp  function3.cpp  main.cpp  program.h
examples/build_systems/solution/: Makefile
examples/compilation_process/: README.md  compilation_example.cpp  example.cpp
examples/enviroment_variables_and_flags/: ENV_VARIABLES.md  FLAGS.md
examples/enviroment_variables_and_flags/include/: message_lib.h
examples/enviroment_variables_and_flags/src/: EXERCISE.md  main.cpp
examples/libraries/: README.md  main.cpp  matematicas.cpp  matematicas.h
examples/libraries/creating_libraries/: suma.c
examples/libraries/creating_libraries/include/: suma.h
